[tool.poetry]
name = "tensorboard-conversion"
version = "0.1.0"
description = ""
authors = ["Ole Martin Ruud <dev@barskern.no>"]
readme = "README.md"
packages = [{include = "tensorboard_conversion"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "^2.12.0"
Pillow = "^9.5.0"
pandas = "^2.0.1"

[tool.poetry.scripts]
tensorboard_conversion = "tensorboard_conversion:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
